[package]
name = "test-udf"
version = "0.1.0"
edition = "2021"
publish = false # prevent accidentally publishing to crates.io

# Add this section to specify we want to create a C dynamic library
[lib]
crate-type = ["cdylib"]

[dependencies]
udf = { version = "0.5.0-rc.2", features = ["mock"] } # our dependency on the `udf` crate

# Ignore the below, it's strictly for testing the markdown file
[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
